# Pillstore

./: .gitconfig  .gitignore  README.md
pillstore/: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
pillstore/app/: .gitignore  main.py
pillstore/app/.linter/: Dockerfile  pyproject.toml
pillstore/app/api/: api_products.py
pillstore/app/api/v2/: admin.py  auth.py  cart.py  categories.py  favorites.py  orders.py  products.py  profile.py
pillstore/app/core/: admin_redirect.py  auth_utils.py  config.py  deps.py  init.py  logger.py  mini_app_token.py  receipt_config.py  security.py
pillstore/app/db/: session.py
pillstore/app/db_crud/: admin_crud.py  base.py  batch_crud.py  cart_crud.py  category_crud.py  favorites_crud.py  order_crud.py  products_crud.py  user_crud.py
pillstore/app/exceptions/: handlers.py  products.py
pillstore/app/migrations/: env.py
pillstore/app/migrations/versions/: a20e955a6095_sync_existing_db.py  b1_product_batches.py  c2_drop_product_expiry_at.py  d3_cost_phone_consent.py  d44bad61600d_initial_create_all_tables.py  e4_user_favorites.py  f5_user_telegram_id.py
pillstore/app/models/: __init__.py  associations.py  batches.py  cart_items.py  categories.py  favorites.py  orders.py  products.py  users.py
pillstore/app/routers/: admin.py  auth.py  errors.py  mini.py  orders.py  products.py  profile.py  scraper.py  users.py
pillstore/app/schemas/: auth.py  cart.py  category.py  favorites.py  order.py  product.py
pillstore/app/services/: admin_service.py  cart.py  cart_service.py  category_service.py  favorites_service.py  iherb_scraper.py  order_service.py  product_service.py  profile_service.py  scraper_url.py  user_service.py  utils.py
pillstore/app/test_data/: load_data.py  products.json
pillstore/app/tests/: README.md  conftest.py  test_product.py
pillstore/app/tests/api/: test_admin_api.py  test_products_api.py
pillstore/app/tests/integration/: __init__.py  test_batch_flow.py  test_db_schema.py
pillstore/app/utils/: description_parser.py  iherb_scraper.py  utils.py
pillstore/bot/: README.md  api_client.py  config.py  handlers.py  main.py  pyproject.toml
pillstore/static/css/: admin.css  footer.css  receipt.css  templates.css
pillstore/static/js/: count_cart.js  dashboard-chart.js  favorites.js  privacy-back.js  receipt.js
pillstore/templates/: base.html  cart.html  index.html  mini_app.html  payment.html  privacy.html  product_detail.html
pillstore/templates/admin/: _product_batch_inputs.html  _product_batch_list.html  _product_description_fields.html  _product_url_status_image.html  _sidebar.html  admin.html  product_edit.html  user_edit.html
pillstore/templates/auth/: login.html  register.html  reset_password.html
pillstore/templates/components/: _flash.html  _pagination.html  _stat_card.html
pillstore/templates/errors/: 403.html  500.html  admin_error.html
pillstore/templates/order/: checkout.html  order_detail.html  receipt.html
pillstore/templates/profile/: favorites.html  profile.html
(+4 files in other folders)
