[tool.poetry]
name = "pillstore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
asyncpg = "^0.31.0"
greenlet = "^3.3.0"
aiosqlite = "^0.22.1"
aiohttp = "^3.13.3"
aiofiles = "^25.1.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
pyjwt = "^2.10.1"
jose = "^1.0.0"
bs4 = "^0.0.2"
requests = "^2.32.5"
lxml = "^6.0.2"
playwright = "^1.57.0"
chromium = "^0.0.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
python-json-logger = "^4.0.0"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
